new file:   css/footer.css 	new file:   images/banner/Acer-Gaming.jpg 	new file:   images/banner/Laptop-Dell-Gaming-G15-5535-banner.jpg 	deleted:    images/banner/dell-sale.jpg 	new file:   images/banner/fire.gif 	deleted:    images/banner/sale-laptop.jpg 	new file:   images/banner/tuf-gaming-f15.jpg 	new file:   images/footer/applepay.jpg 	new file:   images/footer/mastercard.png 	new file:   images/footer/momo.jpg 	new file:   images/footer/visa.png 	new file:   images/footer/vnpay.jpg 	new file:   images/footer/zalopay.png 	new file:   images/header-icon/08-Delivery_Truck-512.webp 	new file:   images/header-icon/check-order.jpg 	new file:   images/header-icon/check-order.png 	new file:   images/header-icon/check-order.webp

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CellphoneZ</title>
+    <title>SellphoneZ</title>
 
     <!-- Link to CSS -->
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/footer.css">
 
 
 
@@ -33,40 +34,49 @@
 
             <nav class="navbar">
                 <div class="navbar-list">
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="mobile-icon">
                         <img class="navbar-item-icon-img" src="./images/header-icon/mobile-icon.jpg">
                         <span>Điện Thoại</span>
                     </a>
 
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="ip-icon">
                         <img class="iphone-icon-img" src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
 
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="ss-icon">
                         <img class="Samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
                         <span>SamSung</span></a>
 
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="laptop-icon">
                         <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
                         <span>Laptop</span></a>
 
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="asus-icon">
                         <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
                         <span>Asus</span></a>
 
-                    <a href="" class="navbar-item-link">
+                    <a href="" class="dell-icon">
                         <img class="dell-icon-img" src="./images/header-icon/dell-icon.png" style="width: 30px;">
-                        <span>Dell</span></a>
+                        <span>Dell</span>
+
+                    </a>
+
+                    <div class="check-order">
+                        <a href="">
+                            <img class="check-order-icon-img" src="./images/header-icon/08-Delivery_Truck-512.webp"
+                                style="width: 50px;">
+                            <span>Kiểm tra đơn hàng</span></a>
+                    </div>
 
                 </div>
 
 
 
             </nav>
-            <div class="freeConsultation">
+            <!-- <div class="check-order">
                 <a href="tel:0386036132">
-                    <b>0386.036.132</b><span> Tư vấn miễn phí</span>
+                    <span> Kiểm tra đơn hàng</span>
                 </a>
-            </div>
+            </div> -->
 
             <div class="header-cart">
                 <a href=""> <img class="header-cart-img" src="./images/header-icon/cart-icon.png"
@@ -86,9 +96,9 @@
         </header>
 
 
-        <div class="container">
+        <div class="container" style="height: 2000px; ">
 
-
+            <!-- Banner -->
             <div class="banner">
                 <div class="banner-list">
                     <div class="banner-main">
@@ -103,14 +113,14 @@
                                 <a href=""><img src="images/banner/galaxy-s24-sale.jpeg" alt=""></a>
                             </div>
                             <div class="item">
-                               <a href=""> <img src="images/banner/iphone-15-series-sale.jpeg" alt=""></a>
+                                <a href=""> <img src="images/banner/iphone-15-series-sale.jpeg" alt=""></a>
                             </div>
                             <div class="item">
                                 <a href=""> <img src="images/banner/oppo-reno-12.png" alt=""></a>
                             </div>
                         </div>
-                         <!-- button prev and next -->
-                         <div class="buttons">
+                        <!-- button prev and next -->
+                        <div class="buttons">
                             <button id="prev">
                                 < </button>
                                     <button id="next">></button>
@@ -124,26 +134,88 @@
                             <li></li>
                         </ul>
                     </div>
-                    <div class="banner-aside">
+                    <div class="banner-second">
                         <div class="banner2">
-                            <a href=""><img src="./images/banner/sale-laptop.jpg" alt=""></a>
+                            <a href="">Giảm ngay 3 triệu khi đặt trước Iphone 16 Series tại SZ
+                                <img src="./images/banner/fire.gif" style="width: 200px; height: 8px;" alt="">
+                            </a>
                         </div>
                         <div class="banner3">
-                            <a href=""></a>
+                            <a href=""><img src="./images/banner/Acer-Gaming.jpg" alt=""></a>
                         </div>
                         <div class="banner4">
-                            <a href=""></a>
+                            <a href=""><img src="./images/banner/tuf-gaming-f15.jpg" alt=""></a>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Content -->
+
+
         </div>
 
         <!-- script Banner -->
         <script src="/js/banner.js"></script>
-        <!-- <footer class="footer">
-<p>hihi</p>
-        </footer> -->
+
+
+
+        <footer class="footer">
+            <div class="ft-content-one">
+                <div class="ft-content1">
+                    <h4>Hỗ trợ dịch vụ</h4>
+                    <ul>
+                        <li><a href="">Chính sách hướng dẫn mua hàng trả góp</a></li>
+                        <li><a href="">Hướng dẫn mua hàng và chính sách vận chuyển</a></li>
+                        <li><a href="">Tra cứu đơn hàng</a></li>
+                        <li><a href="">Chính sách đổi mới và bảo hành</a></li>
+                        <li><a href="">Chính sách bảo mật</a></li>
+                        <li><a href="">Chính sách giải quyết khiếu nại</a></li>
+                    </ul>
+                </div>
+                <div class="ft-content2">
+                    <h4>Thông tin liên hệ: </h4>
+                    <ul>
+                        <li>Showroom: <b>Tiểu vương quốc Hóc Môn</b></li>
+                        <li>Tổng đài hỗ trợ (tư vẫn miễn phí)</li>
+                        <li>Bán hàng (8:30 - 22:00): <b>0386.036.130</b></li>
+                        <li>Doanh nghiêp & Đối tác (8:30 - 22:00): <b>0702.641.159</b></li>
+                        <li>Kĩ thuật (8:30 - 22:00): <b>0972.017.749</b></li>
+                    </ul>
+
+                </div>
+                <div class="ft-content3">
+                    <h4>Phương thức thanh toán</h4>
+                    <div class="payment">
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                        <a href="">
+                            <img src="./images/footer/momo.jpg" alt="">
+                        </a>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="ft-content-second">
+                .
+            </div>
+        </footer>
 
 
 
