modified:   css/footer.css 	modified:   css/header.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="log-in">
                 <a href="" class="log-in-icon">
                     <img class="log-in-icon-img" src="./images/header-icon/login-icon.png" style="width: 30px;">
-                    <span>Đăng nhập</span>
+                    <span>ĐĂNG NHẬP</span>
                 </a>
 
             </div>
@@ -186,34 +186,37 @@
                 <div class="ft-content3">
                     <h4>Phương thức thanh toán</h4>
                     <div class="payment">
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
-                        <a href="">
-                            <img src="./images/footer/momo.jpg" alt="">
-                        </a>
+                        <div class="payment1">
+                            <a href="">
+                                <img src="./images/footer/momo.jpg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./images/footer/applepay.jpg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./images/footer/mastercard.png" alt="">
+                            </a>
+                        </div>
+                        <div class="payment2">
+                            <a href="">
+                                <img src="./images/footer/visa.png" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./images/footer/vnpay.jpg" alt="">
+                            </a>
+                            <a href="">
+                                <img src="./images/footer/zalopay.png" alt="">
+                            </a>
+                        </div>
+
                     </div>
 
 
                 </div>
             </div>
+            <hr>
             <div class="ft-content-second">
-                .
+                <b>CÔNG TY TRÁCH NHIỆM HỮU HẠN 2 THÀNH VIÊN SZ</b>. Địa chỉ: Tiểu vương quốc Hóc Môn. (Đăng kí ngày: 09/07/2024)
             </div>
         </footer>
 
