--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 <body>
     <div class="app">
-        <header class="header">
+        <!-- Header -->
+            <header class="header">
             <div class="logo">
                 <img src="" alt="Logo">
             </div>
@@ -47,7 +48,7 @@
                         <img class="iphone-icon-img" src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
 
                     <a href="" class="ss-icon">
-                        <img class="Samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
+                        <img class="samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
                         <span>SamSung</span></a>
 
                     <a href="" class="laptop-icon">
@@ -97,13 +98,13 @@
                 </a>
 
             </div>
-        </header>
+            </header>
 
-
-        <div class="container" style="height: 2000px; ">
+        <!-- Container -->
+             <div class="container" style="height: 2000px; ">
 
             <!-- Banner -->
-            <div class="banner">
+             <div class="banner">
                 <div class="banner-list">
                     <div class="banner-main">
                         <div class="banner1">
@@ -125,7 +126,7 @@
                         </div>
                         <!-- button prev and next -->
                         <div class="buttons">
-                            <button id="prev">
+                            <button id="prev"><
                             </button>
                             <button id="next">></button>
                         </div>
@@ -152,18 +153,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                </div>
+            
+                <!-- script Banner -->
+                <script src="/js/banner.js"></script>
             <!-- Content -->
 
 
-        </div>
-
-        <!-- script Banner -->
-        <script src="/js/banner.js"></script>
+             </div>
 
 
 
-        <footer class="footer">
+        <!-- Footer -->
+             <footer class="footer">
             <div class="ft-content-one">
                 <div class="ft-content1">
                     <h4>Hỗ trợ dịch vụ</h4>
@@ -222,7 +224,7 @@
             <div class="ft-content-second">
                 <b>CÔNG TY TRÁCH NHIỆM HỮU HẠN 2 THÀNH VIÊN SZ</b>. Địa chỉ: Tiểu vương quốc Hóc Môn. (Đăng kí ngày: 09/07/2024)
             </div>
-        </footer>
+            </footer>
 
 
     </div>
