--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/popup.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
 
 
 
@@ -22,66 +20,64 @@
 
 <body>
     <div class="app">
-        <!-- Header -->
-            <header class="header">
+        <header class="header">
             <div class="logo">
                 <img src="" alt="Logo">
             </div>
 
-            <form class="header-search">
-                <input class="search-input" type="text" placeholder="Tìm sản phẩm mong muốn...">
-                <button class="search-btn" type="submit">
+                <form class="header-search">
+                    <input class="search-input" type="text" placeholder="Tìm sản phẩm mong muốn...">
+                    <button class="search-btn" type="submit">
 
-                    <img class="icon-search" src="./images/header-icon/search-icon.jpg" alt="">
+                        <img class="icon-search" src="./images/header-icon/search-icon.jpg" alt="">
 
-                </button>
-            </form>
+                    </button>
+                </form>
 
-            <nav class="navbar">
-                <div class="navbar-list">
-                    <a href="" class="mobile-icon">
-                        <img class="navbar-item-icon-img" src="./images/header-icon/mobile-icon.jpg">
-                        <span>Điện Thoại</span>
-                    </a>
+                <nav class="navbar">
+                    <div class="navbar-list">
+                        <a href="" class="mobile-icon">
+                            <img class="navbar-item-icon-img" src="./images/header-icon/mobile-icon.jpg">
+                            <span>Điện Thoại</span>
+                        </a>
 
-                    <a href="" class="ip-icon">
-                        <img class="iphone-icon-img" src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
+                        <a href="" class="ip-icon">
+                            <img class="iphone-icon-img"
+                                src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
 
                     <a href="" class="ss-icon">
-                        <img class="samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
+                        <img class="Samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
                         <span>SamSung</span></a>
 
-                    <a href="" class="laptop-icon">
-                        <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
-                        <span>Laptop</span></a>
+                        <a href="" class="laptop-icon">
+                            <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
+                            <span>Laptop</span></a>
 
-                    <a href="" class="asus-icon">
-                        <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
-                        <span>Asus</span></a>
+                        <a href="" class="asus-icon">
+                            <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
+                            <span>Asus</span></a>
 
-                    <a href="" class="dell-icon">
-                        <img class="dell-icon-img" src="./images/header-icon/dell-icon.png" style="width: 30px;">
-                        <span>Dell</span>
+                        <a href="" class="dell-icon">
+                            <img class="dell-icon-img" src="./images/header-icon/dell-icon.png" style="width: 30px;">
+                            <span>Dell</span>
 
-                    </a>
+                        </a>
 
-                    <div class="check-order">
-                        <a href="">
-                            <img class="check-order-icon-img" src="./images/header-icon/08-Delivery_Truck-512.webp"
-                                style="width: 50px;">
-                            <span>Kiểm tra đơn hàng</span></a>
+                        <div class="check-order">
+                            <a href="">
+                                <img class="check-order-icon-img" src="./images/header-icon/08-Delivery_Truck-512.webp"
+                                    style="width: 50px;">
+                                <span>Kiểm tra đơn hàng</span></a>
+                        </div>
+
                     </div>
 
-                </div>
-
-
-
-            </nav>
-            <!-- <div class="check-order">
-                <a href="tel:0386036132">
-                    <span> Kiểm tra đơn hàng</span>
-                </a>
-            </div> -->
+                </nav>
+                <!-- <div class="check-order">
+                    <a href="tel:0386036132">
+                        <span> Kiểm tra đơn hàng</span>
+                    </a>
+                </div> -->
 
             <div class="header-cart">
                 <a href=""> <img class="header-cart-img" src="./images/header-icon/cart-icon.png"
@@ -96,15 +92,28 @@
                     <img class="log-in-icon-img" src="./images/header-icon/login-icon.png" style="width: 30px;">
                     <span>ĐĂNG NHẬP</span>
                 </a>
+                <div class="header-cart">
+                    <a href=""> <img class="header-cart-img" src="./images/header-icon/cart-icon.png"
+                            style="width: 25px; height: 30px;;">
+                        <span class="cart-quantity-item">
+                            0
+                        </span>
+                    </a>
+                </div>
+                <div class="log-in">
+                    <a href="" class="log-in-icon">
+                        <img class="log-in-icon-img" src="./images/header-icon/login-icon.png" style="width: 30px;">
+                        <span>Đăng nhập</span>
+                    </a>
 
             </div>
-            </header>
+        </header>
 
-        <!-- Container -->
-             <div class="container" style="height: 2000px; ">
+
+        <div class="container" style="height: 2000px; ">
 
             <!-- Banner -->
-             <div class="banner">
+            <div class="banner">
                 <div class="banner-list">
                     <div class="banner-main">
                         <div class="banner1">
@@ -126,7 +135,7 @@
                         </div>
                         <!-- button prev and next -->
                         <div class="buttons">
-                            <button id="prev"><
+                            <button id="prev">
                             </button>
                             <button id="next">></button>
                         </div>
@@ -153,19 +162,18 @@
                         </div>
                     </div>
                 </div>
-                </div>
-            
-                <!-- script Banner -->
-                <script src="/js/banner.js"></script>
+            </div>
             <!-- Content -->
 
 
-             </div>
+        </div>
+
+        <!-- script Banner -->
+        <script src="/js/banner.js"></script>
 
 
 
-        <!-- Footer -->
-             <footer class="footer">
+        <footer class="footer">
             <div class="ft-content-one">
                 <div class="ft-content1">
                     <h4>Hỗ trợ dịch vụ</h4>
