--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="app">
         <!-- Header -->
-            <header class="header">
+        <header class="header">
             <div class="logo">
                 <img src="" alt="Logo">
             </div>
@@ -39,31 +39,45 @@
 
             <nav class="navbar">
                 <div class="navbar-list">
-                    <a href="" class="mobile-icon">
-                        <img class="navbar-item-icon-img" src="./images/header-icon/mobile-icon.jpg">
-                        <span>Điện Thoại</span>
-                    </a>
+                    <div class="mobile">
+                        <a href="">
+                            <img class="navbar-item-icon-img" src="./images/header-icon/mobile-icon.jpg">
+                            <span>Điện Thoại</span>
 
-                    <a href="" class="ip-icon">
-                        <img class="iphone-icon-img" src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
+                        </a>
+                    </div>
 
-                    <a href="" class="ss-icon">
-                        <img class="samsung-icon-img" src="./images/header-icon/samsung-icon.png" style="width: 70px;">
-                        <span>SamSung</span></a>
+                    <div class="iphone">
+                        <a href="" class="ip-icon">
+                            <img class="iphone-icon-img"
+                                src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
+                    </div>
 
-                    <a href="" class="laptop-icon">
-                        <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
-                        <span>Laptop</span></a>
+                    <div class="samsung">
+                        <a href="" class="ss-icon">
+                            <img class="samsung-icon-img" src="./images/header-icon/samsung-icon.png"
+                                style="width: 70px;">
+                            <span>SamSung</span></a>
+                    </div>
 
-                    <a href="" class="asus-icon">
-                        <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
-                        <span>Asus</span></a>
+                    <div class="laptop">
+                        <a href="" class="laptop-icon">
+                            <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
+                            <span>Laptop</span></a>
+                    </div>
+                      <div class="asus">
+                        <a href="" class="asus-icon">
+                            <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
+                            <span>Asus</span></a>
+                      </div>
 
+                   <div class="dell">
                     <a href="" class="dell-icon">
                         <img class="dell-icon-img" src="./images/header-icon/dell-icon.png" style="width: 30px;">
                         <span>Dell</span>
 
                     </a>
+                   </div>
 
                     <div class="check-order">
                         <a href="">
@@ -98,13 +112,13 @@
                 </a>
 
             </div>
-            </header>
+        </header>
 
         <!-- Container -->
-             <div class="container" style="height: 2000px; ">
+        <div class="container" style="height: 2000px; ">
 
             <!-- Banner -->
-             <div class="banner">
+            <div class="banner">
                 <div class="banner-list">
                     <div class="banner-main">
                         <div class="banner1">
@@ -126,9 +140,9 @@
                         </div>
                         <!-- button prev and next -->
                         <div class="buttons">
-                            <button id="prev"><
-                            </button>
-                            <button id="next">></button>
+                            <button id="prev">
+                                < </button>
+                                    <button id="next">></button>
                         </div>
                         <!-- dots -->
                         <ul class="dots">
@@ -153,19 +167,20 @@
                         </div>
                     </div>
                 </div>
-                </div>
-            
-                <!-- script Banner -->
-                <script src="/js/banner.js"></script>
+            </div>
+
+            <!-- script Banner -->
+            <script src="/js/banner.js"></script>
             <!-- Content -->
 
 
-             </div>
+
+        </div>
 
 
 
         <!-- Footer -->
-             <footer class="footer">
+        <footer class="footer">
             <div class="ft-content-one">
                 <div class="ft-content1">
                     <h4>Hỗ trợ dịch vụ</h4>
@@ -222,9 +237,10 @@
             </div>
             <hr>
             <div class="ft-content-second">
-                <b>CÔNG TY TRÁCH NHIỆM HỮU HẠN 2 THÀNH VIÊN SZ</b>. Địa chỉ: Tiểu vương quốc Hóc Môn. (Đăng kí ngày: 09/07/2024)
+                <b>CÔNG TY TRÁCH NHIỆM HỮU HẠN 2 THÀNH VIÊN SZ</b>. Địa chỉ: Tiểu vương quốc Hóc Môn. (Đăng kí ngày:
+                09/07/2024)
             </div>
-            </footer>
+        </footer>
 
 
     </div>
