modified:   css/base.css 	new file:   css/contact.css 	modified:   css/header.css 	new file:   images/contact/Facebook_Messenger_logo_2020.svg.png 	new file:   images/contact/Icon-Zalo-2021.jpg 	new file:   images/contact/zalo-icon.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/popup.css">
     <link rel="stylesheet" href="css/hot-prod.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 
@@ -49,7 +50,6 @@
                         <div class="all-mobile">
                             <div class="brand">
                                 <h4>HÃNG SẢN XUẤT</h4>
-
                                 <a href="">Iphone</a>
                                 <a href="">Sam Sung</a>
                                 <a href="">Xiaomi</a>
@@ -58,7 +58,7 @@
                                 <a href="">Vivo</a>
                                 <a href="">Nokia</a>
 
-                            
+
                             </div>
                             <div class="fillter-price">
                                 <h4>MỨC GIÁ</h4>
@@ -70,31 +70,180 @@
                                 <a href="">Trên 20 triệu</a>
 
                             </div>
+
+                            <div class="hot-mobile">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="iphone">
                         <a href="" class="ip-icon">
-                            <img class="iphone-icon-img"
-                                src="./images/header-icon/apple-icon.png"><span>Iphone</span></a>
+                            <img class="iphone-icon-img" src="./images/header-icon/apple-icon.png"><span>Iphone</span>
+                        </a>
+                        <div class="all-iphone">
+                            <div class="brand">
+                                <h4>HÃNG SẢN XUẤT</h4>
+                                <a href="">Iphone</a>
+                                <a href="">Sam Sung</a>
+                                <a href="">Xiaomi</a>
+                                <a href="">Oppo</a>
+                                <a href="">Realme</a>
+                                <a href="">Vivo</a>
+                                <a href="">Nokia</a>
+
+
+                            </div>
+                            <div class="fillter-price">
+                                <h4>MỨC GIÁ</h4>
+                                <a href="">Dưới 2 triệu</a>
+                                <a href="">Từ 2 - 4 triệu</a>
+                                <a href="">Từ 4 - 7 triệu</a>
+                                <a href="">Từ 7 - 13 triệu</a>
+                                <a href="">Từ 13 - 20 triệu</a>
+                                <a href="">Trên 20 triệu</a>
+
+                            </div>
+
+                            <div class="hot-mobile">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="samsung">
                         <a href="" class="ss-icon">
                             <img class="samsung-icon-img" src="./images/header-icon/samsung-icon.png"
                                 style="width: 70px;">
-                            <span>SamSung</span></a>
+                            <span>SamSung</span>
+                        </a>
+                        <div class="all-samsung">
+                            <div class="brand">
+                                <h4>HÃNG SẢN XUẤT</h4>
+                                <a href="">Iphone</a>
+                                <a href="">Sam Sung</a>
+                                <a href="">Xiaomi</a>
+                                <a href="">Oppo</a>
+                                <a href="">Realme</a>
+                                <a href="">Vivo</a>
+                                <a href="">Nokia</a>
+
+
+                            </div>
+                            <div class="fillter-price">
+                                <h4>MỨC GIÁ</h4>
+                                <a href="">Dưới 2 triệu</a>
+                                <a href="">Từ 2 - 4 triệu</a>
+                                <a href="">Từ 4 - 7 triệu</a>
+                                <a href="">Từ 7 - 13 triệu</a>
+                                <a href="">Từ 13 - 20 triệu</a>
+                                <a href="">Trên 20 triệu</a>
+
+                            </div>
+
+                            <div class="hot-mobile">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="laptop">
                         <a href="" class="laptop-icon">
                             <img class="laptop-icon-img" src="./images/header-icon/laptop-icon.jpg">
-                            <span>Laptop</span></a>
+                            <span>Laptop</span>
+                        </a>
+                        <!-- menu con -->
+                        <div class="all-laptop">
+                            <div class="brand">
+                                <h4>HÃNG SẢN XUẤT</h4>
+                                <a href="">Iphone</a>
+                                <a href="">Sam Sung</a>
+                                <a href="">Xiaomi</a>
+                                <a href="">Oppo</a>
+                                <a href="">Realme</a>
+                                <a href="">Vivo</a>
+                                <a href="">Nokia</a>
+
+
+                            </div>
+                            <div class="fillter-price">
+                                <h4>MỨC GIÁ</h4>
+                                <a href="">Dưới 2 triệu</a>
+                                <a href="">Từ 2 - 4 triệu</a>
+                                <a href="">Từ 4 - 7 triệu</a>
+                                <a href="">Từ 7 - 13 triệu</a>
+                                <a href="">Từ 13 - 20 triệu</a>
+                                <a href="">Trên 20 triệu</a>
+
+                            </div>
+                            <div class="hot-laptop">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
+                        </div>
                     </div>
                     <div class="asus">
                         <a href="" class="asus-icon">
                             <img class="macbook-icon-img" src="./images/header-icon/asus-icon.png" style="width: 35px">
-                            <span>Asus</span></a>
+                            <span>Asus</span>
+                        </a>
+                        <div class="all-asus">
+                            <div class="brand">
+                                <h4>HÃNG SẢN XUẤT</h4>
+                                <a href="">Iphone</a>
+                                <a href="">Sam Sung</a>
+                                <a href="">Xiaomi</a>
+                                <a href="">Oppo</a>
+                                <a href="">Realme</a>
+                                <a href="">Vivo</a>
+                                <a href="">Nokia</a>
+
+
+                            </div>
+                            <div class="fillter-price">
+                                <h4>MỨC GIÁ</h4>
+                                <a href="">Dưới 2 triệu</a>
+                                <a href="">Từ 2 - 4 triệu</a>
+                                <a href="">Từ 4 - 7 triệu</a>
+                                <a href="">Từ 7 - 13 triệu</a>
+                                <a href="">Từ 13 - 20 triệu</a>
+                                <a href="">Trên 20 triệu</a>
+
+                            </div>
+
+                            <div class="hot-mobile">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="dell">
@@ -103,6 +252,40 @@
                             <span>Dell</span>
 
                         </a>
+                        <div class="all-dell">
+                            <div class="brand">
+                                <h4>HÃNG SẢN XUẤT</h4>
+                                <a href="">Iphone</a>
+                                <a href="">Sam Sung</a>
+                                <a href="">Xiaomi</a>
+                                <a href="">Oppo</a>
+                                <a href="">Realme</a>
+                                <a href="">Vivo</a>
+                                <a href="">Nokia</a>
+
+
+                            </div>
+                            <div class="fillter-price">
+                                <h4>MỨC GIÁ</h4>
+                                <a href="">Dưới 2 triệu</a>
+                                <a href="">Từ 2 - 4 triệu</a>
+                                <a href="">Từ 4 - 7 triệu</a>
+                                <a href="">Từ 7 - 13 triệu</a>
+                                <a href="">Từ 13 - 20 triệu</a>
+                                <a href="">Trên 20 triệu</a>
+
+                            </div>
+
+                            <div class="hot-mobile">
+                                <h4>Điện thoại HOT </h4>
+                                <a href="">Iphone 15 Pro Max</a>
+                                <a href="">Galaxy Z Flip6</a>
+                                <a href="">Galaxy Z Fold6</a>
+                                <a href="">Oppo Reno12</a>
+                                <a href="">Xiaomi14</a>
+                                <a href="">Sam Sung A55</a>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="check-order">
@@ -138,7 +321,7 @@
         </header>
         </header>
 
-        <!-- Container -->
+        <!-- Main Container  -->
         <div id="container" style="height: 3000px; ">
 
             <!-- Banner -->
@@ -468,7 +651,22 @@
 
                 </div>
             </div>
+
+            <!-- Aside  -->
+            <aside>
+                <div class="contact">
+                    <div class="zalo">
+                        <a href=""><img src="images/contact/zalo-icon.png" alt=""></a>
+                        <span>Chat với chúng tôi qua Zalo</span>
+                    </div>
+                    <div class="message">
+                        <a href=""><img src="images/contact/Facebook_Messenger_logo_2020.svg.png" alt=""></a>
+                        <span>Chat với chúng tôi qua Facebook Message</span>
+                    </div>
+                </div>
+            </aside>
         </div>
+
 
         <!-- script Banner -->
         <script src="/js/banner.js"></script>
