--- a/index.html
+++ b/index.html
@@ -652,20 +652,24 @@
                 </div>
             </div>
 
-            <!-- Aside  -->
-            <aside>
-                <div class="contact">
-                    <div class="zalo">
-                        <a href=""><img src="images/contact/zalo-icon.png" alt=""></a>
-                        <span>Chat với chúng tôi qua Zalo</span>
-                    </div>
-                    <div class="message">
-                        <a href=""><img src="images/contact/Facebook_Messenger_logo_2020.svg.png" alt=""></a>
-                        <span>Chat với chúng tôi qua Facebook Message</span>
-                    </div>
-                </div>
-            </aside>
+
         </div>
+        <!-- Aside  -->
+        <aside>
+            <div class="contact">
+                <div class="zalo">
+
+                    <a href=""><img src="images/contact/zalo-icon.png" alt="">
+                        <span>Chat với chúng tôi qua Zalo</span>
+                    </a>
+                </div>
+                <div class="message">
+                    <a href=""><img src="images/contact/Facebook_Messenger_logo_2020.svg.png" alt="">
+                    <span>Chat với chúng tôi qua Facebook Message</span>
+                </a>
+                </div>
+            </div>
+        </aside>
 
 
         <!-- script Banner -->
